@@ -42,6 +42,10 @@ Trunk (unreleased changes)
 12. HADOOP-1112.  Fix a race condition in Hadoop metrics.
     (David Bowen via tomwhite)
 
+13. HADOOP-1108.  Checksummed file system should retry reading if a
+    different replica is found when handling ChecksumException.
+    (Hairong Kuang via tomwhite)
+
 
 Release 0.12.0 - 2007-03-02
 
